from ucommon 5.0.1 to 5.0.2
- fix for termios support.
- shell getpass and inkey methods.
- extended cipher key management methods.
- crytographic archiver (car) added.

from ucommon 5.0.0 to 5.0.1
- missing commoncpp/numbers.h header.

from ucommon 4.3.3 to 5.0.0
- thread objects fully inheritable.

from ucommon 4.3.2 to 4.3.3
- service control path added for dropfile info.
- generics dup template added.

from ucommon 4.3.1 to 4.3.2
- cmake unit tests added and automated.
- extensions to mapping, copy and mapped_view get.
- certificate paths now part of usecure.
- sorting and named list issues resolved.

from ucommon 4.3.0 to 4.3.1
- fix for access to keyfile::create().
- new -xxx and +xxx numeric parser option.

from ucommon 4.2.2 to 4.3.0
- shell::path added.
- fsys for descriptor.
- keyfile extended.
- symlink handling in fsys.

from ucommon 4.2.1 to 4.2.2
- reorg how we do cmake path configurations.

from ucommon 4.2.0 to 4.2.1
- proposed barrier dec from Leon.
- added fsys::islink symlink check function.
- keyfile::save method added, registry interfaces.

from ucommon 4.1.7 to 4.2.0
- some clarification of linked object abi.

from ucommon 4.1.6 to 4.1.7
- small fixes in cmake to add includes to projects, etc.

from ucommon 4.1.5 to 4.1.6
- fixed permission of shared memory, now world readable if not umasked.

from ucommon 4.1.4 to 4.1.5
- posix timers have become experimental since seems broken on some platforms

from ucommon 4.1.3 to 4.1.4
- revised cmake for unix builds, fixed cmake bug with non-stdlib

from ucommon 4.1.2 to 4.1.3
- new check for posix timing and monotomic clocking
- thread unit test expanded to verify timed operations

from ucommon 4.1.1 to 4.1.2
- configuration clearification for posix timers
- linkage fix for secure and sstream; no copy constructor

from ucommon 4.1.0 to 4.1.1
- rexlock try method and better thread inheritence
- timer fix for dll linkage, again broken windows
- thread specific storage