@@ -292,6 +292,7 @@ check_include_files(sys/inotify.h HAVE_SYS_INOTIFY_H)
 check_include_files(sys/event.h HAVE_SYS_EVENT_H)
 check_include_files(syslog.h HAVE_SYSLOG_H)
 check_include_files(openssl/ssl.h HAVE_OPENSSL)
+check_include_files(openssl/fips.h HAVE_OPENSSL_FIPS_H)
 check_include_files(libintl.h HAVE_LIBINTL_H)
 check_include_files(netinet/in.h HAVE_NETINET_IN_H)
 check_include_files(net/if.h HAVE_NET_IF_H)
