@@ -85,6 +85,7 @@
 #cmakedefine HAVE_FCNTL_H 1
 #cmakedefine HAVE_TERMIOS_H 1
 #cmakedefine HAVE_TERMIO_H 1
+#cmakedefine HAVE_OPENSSL_FIPS_H 1
 
 #cmakedefine POSIX_TIMERS 1
 
