@@ -616,12 +616,14 @@ AC_ARG_WITH(pkg-config,
         AC_CHECK_HEADERS(openssl/ssl.h, [
             OPENSSL_LIBS="-lssl -lcrypto -lz $OPENSSL_LINK"
         ])
+        AC_CHECK_HEADERS(openssl/fips.h)
     ])
     PKG_CHECK_MODULES(GNUTLS, [gnutls >= 2.8.0], [], [GNUTLS_LIBS=""])
 ],[
     AC_CHECK_HEADERS(openssl/ssl.h, [
         OPENSSL_LIBS="-lssl -lcrypto -lz $OPENSSL_LINK"
     ])
+    AC_CHECK_HEADERS(openssl/fips.h)
     AC_CHECK_LIB(gnutls, gnutls_init, [
         GNUTLS_LIBS="-lgnutls -lgcrypt"
     ])
