@@ -3,6 +3,7 @@ from ucommon 5.0.1 to 5.0.2
 - shell getpass and inkey methods.
 - extended cipher key management methods.
 - crytographic archiver (car) added.
+- openssl fips support added.
 
 from ucommon 5.0.0 to 5.0.1
 - missing commoncpp/numbers.h header.
